app/styles/_mobirise.scss
/* ... */
.mbr-navbar-column-xs {
  width: 10%;
}

.mbr-navbar-column-s {
  width: 20%;
}

.mbr-navbar-column-m {
  width: 30%;
}

.mbr-navbar-column-l {
  width: 40%;
}

.mbr-navbar-column-xl {
  width: 50%;
}

.mbr-navbar-menu-box-inline-center .mbr-navbar-column,
.mbr-navbar-menu-box-inline-left .mbr-navbar-column,
.mbr-navbar-menu-box-inline-right .mbr-navbar-column {
  display: inline-block;
}

.mbr-navbar-items {
  position    : relative;
  left        : -20px;
  float       : left;
  padding-left: 0;
}

.mbr-navbar-items-right {
  left : 0;
  float: right;
}

.mbr-navbar-item {
  position: relative;
  display : block;
  float   : left;
}

.mbr-navbar-hamburger {
  position  : absolute;
  z-index   : 10000;
  top       : 50%;
  right     : 10px;
  display   : none;
  margin-top: -12px;
}

.mbr-navbar-collapsed .mbr-navbar-container {
  position: relative;
}

.mbr-navbar-collapsed .mbr-navbar-column {
  display: block;
  width  : 100%;
}

.mbr-navbar-collapsed .mbr-navbar-items-right {
  padding-top: 13px;
}

.mbr-navbar-collapsed .mbr-navbar-menu {
  position  : fixed;
  z-index   : 9999;
  top       : 0;
  left      : 0;
  display   : none;
  width     : 100%;
  height    : 100%;
  background: rgba(0,0,0,.9);
}

.mbr-navbar-collapsed .mbr-navbar-menu-box {
  display       : table-cell;
  vertical-align: middle;
}

.mbr-navbar-collapsed .mbr-navbar-items {
  float: none;
}

.mbr-navbar-collapsed .mbr-navbar-item {
  float: none;
}

.mbr-navbar-collapsed .mbr-navbar-hamburger {
  display: block;
}

.mbr-navbar-open {
  .mbr-navbar-items {
    float: none !important;
  }

  .mbr-buttons-right {
    .mbr-buttons-btn,
    .mbr-buttons-link {
      text-align: center;
    }
  }
}

.mbr-navbar-collapsed.mbr-navbar-open .mbr-navbar-menu {
  display: table;
}

.mbr-navbar-collapsed.mbr-navbar-open:not(.mbr-navbar-sticky) .mbr-navbar-section {
  position  : fixed;
  background: none;
}

.mbr-navbar-collapsed.mbr-navbar-open .mbr-navbar-brand {
  visibility: hidden;
}

.mbr-navbar-collapsed.mbr-navbar-sticky.mbr-navbar-open .mbr-navbar-brand {
  visibility: visible;
}

.mbr-navbar-collapsed.mbr-navbar-open .mbr-navbar-brand-img,
.mbr-navbar-collapsed.mbr-navbar-open .mbr-navbar-container {
  transition: none;
}

.mbr-navbar-freeze.mbr-navbar-collapsed.mbr-navbar-open .mbr-navbar-hamburger,
.mbr-navbar-freeze.mbr-navbar-collapsed.mbr-navbar-open .mbr-navbar-hamburger:hover {
  color: #fff !important;
}

.mbr-navbar-sticky .mbr-navbar-section {
  position: fixed;
}

.mbr-navbar-absolute {
  position: absolute;
  top     : 0;
}
// fix for popup menu conflict
@media (max-width:$screen-xs-min) {
  .mbr-navbar-absolute.mbr-navbar[id^=menu-] {
    position: absolute;
  }
}

.mbr-navbar-transparent .mbr-navbar-section {
  background: none;
}
@media (max-width:$screen-sm-max) {
  .mbr-navbar-auto-collapse .mbr-navbar-container {
    position: relative;
  }

  .mbr-navbar-auto-collapse .mbr-navbar-column {
    display: block;
    width  : 100%;
  }

  .mbr-navbar-column {
    overflow-x: hidden;
    overflow-y: auto;
    max-height: 100vh;
  }

  .mbr-navbar-column::-webkit-scrollbar {
    display: none;
  }

  .mbr-navbar-auto-collapse .mbr-navbar-items-right {
    padding-top: 13px;
  }

  .mbr-navbar-auto-collapse .mbr-navbar-menu {
    position  : fixed;
    z-index   : 9999;
    top       : 0;
    left      : 0;
    display   : none;
    width     : 100%;
    height    : 100%;
    background: rgba(0,0,0,.9);
  }

  .mbr-navbar-auto-collapse .mbr-navbar-menu-box {
    display       : table-cell;
    vertical-align: middle;
  }

  .mbr-navbar-auto-collapse .mbr-navbar-items {
    float: none;
  }

  .mbr-navbar-auto-collapse .mbr-navbar-item {
    float: none;
  }

  .mbr-navbar-auto-collapse .mbr-navbar-hamburger {
    display: block;
  }

  .mbr-navbar-auto-collapse.mbr-navbar-open .mbr-navbar-menu {
    display: table;
  }

  .mbr-navbar-auto-collapse.mbr-navbar-open:not(.mbr-navbar-sticky) .mbr-navbar-section {
    position  : fixed;
    background: none;
  }

  .mbr-navbar-auto-collapse.mbr-navbar-open .mbr-navbar-brand {
    visibility: hidden;
  }

  .mbr-navbar-auto-collapse.mbr-navbar-sticky.mbr-navbar-open .mbr-navbar-brand {
    visibility: visible;
  }

  .mbr-navbar-auto-collapse.mbr-navbar-open .mbr-navbar-brand-img,
  .mbr-navbar-auto-collapse.mbr-navbar-open .mbr-navbar-container {
    transition: none;
  }
}

.mbr-after-navbar:before {
  display: block;
  height : 98px;
  content: '';
}

.mbr-hamburger {
  width : 20px;
  height: 23px;
  cursor: pointer;
}

.mbr-hamburger:focus {
  outline: none;
}

.mbr-hamburger-line,
.mbr-hamburger-line:after,
.mbr-hamburger-line:before {
  border-bottom: 2px solid;
  content      : '';
  cursor       : pointer;
  display      : block;
  height       : 1px;
  position     : absolute;
  top          : 9px;
  transition   : all 300ms ease-in-out;
  width        : 30px;
}

.mbr-hamburger-line:before {
  top: -5px;
}

.mbr-hamburger-line:after {
  top: 5px;
}

.mbr-hamburger-open .mbr-hamburger-line {
  border-color: transparent;
}

.mbr-hamburger-open .mbr-hamburger-line:after,
.mbr-hamburger-open .mbr-hamburger-line:before {
  top: 0;
}

.mbr-hamburger-open .mbr-hamburger-line:before {
  -webkit-transform: rotate(45deg);
  -ms-transform    : rotate(45deg);
  transform        : rotate(45deg);
}

.mbr-hamburger-open .mbr-hamburger-line:after {
  top              : 10px;
  -webkit-transform: translatey(-10px) rotate(-45deg);
  -ms-transform    : translatey(-10px) rotate(-45deg);
  transform        : translatey(-10px) rotate(-45deg);
}
@media (max-width:$screen-xs-max) {
  .mbr-hamburger {
    width : 20px;
    height: 23px;
  }

  .mbr-hamburger-line,
  .mbr-hamburger-line:after,
  .mbr-hamburger-line:before {
    top  : 10px;
    width: 27px;
  }

  .mbr-hamburger-line:before {
    top: -5px;
  }

  .mbr-hamburger-line:after {
    top: 5px;
  }
}

.mbr-brand {
  position: relative;
  display : block;
  float   : left;
}
/* ... */

